# songbird

./: .gitignore  Cargo.toml  README.md  log4rs.yml  settings.yml
src/: main.rs  settings.rs  songbites.rs
static/: help-scripts.js  help-styles.css  help.html  index-scripts.js  index-styles.css  index.html
