[package]
name = "songbits"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging and global settings.
log = "0.4"
log4rs = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
lazy_static = "1.4"
futures = "0.3"
futures-util = "0.3"
sanitize-filename = "0.3"
tokio = { version = "1.38.0", features = ["full"] }

# UI related.
actix-web = "4.4.0"
actix-multipart = "0.7.2"
actix-files = "0.6.5"

# Sound related.
hound = "3.5.1"
